# racing_sembas

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml
docs/: class.drawio  scenarios.md
examples/: exploration.rs  remote_classifier.rs
examples/exploration_example/: Cargo.toml
examples/exploration_example/src/: main.rs
examples/exploring_bnn_perf/: fut.py  fut_data.py  fut_graphics.py  fut_network.py  fut_sembas_api.py  main.rs  test.ipynb
examples/exploring_bnn_perf/client/: analysis.ipynb  data.py  graphics.py  main.py  network.py  sembas_api.py
examples/race_simulation/: main.rs
examples/remote_classifier/: Cargo.toml
examples/remote_classifier/src/: main.rs
examples/rl_training/: main.rs
src/: adherer_core.rs  api.rs  explorer_core.rs  extensions.rs  lib.rs  main.rs  preamble.rs  sps.rs  structs.rs  utils.rs
src/adherers/: bs_adherer.rs  const_adherer.rs  mod.rs
src/boundary_tools/: estimation.rs  mod.rs  reacquisition.rs
src/explorers/: mesh_explorer.rs  mod.rs
src/metrics/: boundary_metrics.rs  bs_adherer_metrics.rs  const_adherer_metrics.rs  mod.rs
src/search/: global.rs  global_search.rs  mod.rs  surfacing.rs
src/structs/: boundary.rs  error.rs  messages.rs  messagse.rs  mod.rs  report.rs  sampling.rs  summary.rs
tests/: adherence.rs  exploration.rs  prediction.rs
