[package]
name = "sembas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
petgraph = "0.6.5"
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
rstar = "0.12.0"
serde = { version = "1.0.204", optional = true, features = ["derive"] }
serde_json = { version = "1.0.120", optional = true }

[features]
all = ["default", "api", "sps"]
default = ["global_search", "surfacing"]
api = ["serde", "serde_json"]
global_search = ["rand", "rand_chacha"]
surfacing = []
sps = []
