[package]
name = "sembas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
petgraph = "0.6.5"
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
rstar = "0.12.0"
bytemuck = { version = "1.18.0", optional = true }

[features]
all = ["default", "api", "sps"]
default = ["global_search", "surfacing"]
api = ["bytemuck"]
global_search = ["rand", "rand_chacha"]
surfacing = []
sps = []
