[package]
name = "sembas"
description = "This crate provides tools for exploring the edge of a performance mode for complex systems testing, analysis, and optimization. A performance mode is an abstract characteristic of the system, which can be anything from an Autonomous Vehicle's safety, a function throwing exceptions, or a threshold being exceeded. Any form of binary classification of the input space can be used to explore the boundary between the classifications. Applications include falsification, training data generation, region of validity analysis, and much more."
homepage = "https://github.com/Thomj-Dev/SEMBAS"
repository = "https://github.com/Thomj-Dev/SEMBAS"
license = "GPL-3.0"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
petgraph = "0.6.5"
rand = { version = "0.8.5", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
rstar = "0.12.0"
bytemuck = { version = "1.18.0", optional = true }
serde_json = { version = "1.0.128", optional = true }
serde = { version = "1.0.210", optional = true, features = ["derive"] }

[features]
all = ["default", "api", "metrics", "sps"]
default = ["global_search", "surfacing", "io"]
api = ["bytemuck"]
global_search = ["rand", "rand_chacha"]
io = ["serde", "serde_json"]
surfacing = []
metrics = []
sps = []
